--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Workshop Detail</title>
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Greycliff+CF&display=swap"
       rel="stylesheet"
     />
-    <link href="./fonts/stylesheet.css" rel="stylesheet" /> -->
+    <link href="./fonts/stylesheet.css" rel="stylesheet" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./styles-xsm.css" />
     <link rel="stylesheet" href="./styles-sm.css" />
