--- a/index.html
+++ b/index.html
@@ -491,7 +491,6 @@
                     </p>
                   </div>
                 </div>
-            
               </div>
               <div class="habit-seven">
                 <div class="d-flex align-items-center gap-10">
@@ -2429,109 +2428,104 @@
               </div>
               <hr class="divider mt-40" />
               <div class="mt-40">
-                <div>
-                  <h4 class="about-the-host">About The Hosts</h4>
-                </div>
-
-                <div>
-                  <div class="wrapper about-host-div gap-20">
-                    <div class="card host-details">
-                      <div class="host-details-image">
-                        <img
-                          alt="subhah"
-                          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-saraf.webp"
-                        />
-                      </div>
-                      <div>
-                        <h5 class="host-name">Subah Saraf</h5>
-                      </div>
-
-                      <div class="description host-details-inner">
-                        <p class="host-detail-text">
-                          Subah is an <b>acclaimed health educator</b>,
-                          published author and co-founder of the health
-                          education platform 'Satvic Movement'. Subah's journey
-                          into health began after she healed her own chronic
-                          diseases by At the young age of 17,
-                        </p>
-
-                        <p class="host-detail-text">
-                          she decided to devote her life to the purpose of
-                          uplifting people's health, and trained to become a
-                          holistic health educator. She learnt the science of
-                          'nature cure' under the guidance of multiple Indian
-                          masters.
-                        </p>
-                        <p class="host-detail-text">
-                          Subah's goal is to share this intricate ancient
-                          knowledge, adjusted to contemporary lifestyles, with
-                          as many people as possible, using all the tools that
-                          current day technology has to offer.
-                        </p>
-                      </div>
-                      <span class="read-more-text button">
-                        Read More
-                        <img
-                          alt="Arrow Icon"
-                          loading="lazy"
-                          width="15"
-                          height="10"
-                          decoding="async"
-                          data-nimg="1"
-                          class="ml-2 transform cursor-pointer"
-                          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/yoga/down-arrow.svg"
-                        />
-                      </span>
+                <h4 class="about-the-host">About The Hosts</h4>
+                <div class="wrapper about-host-div gap-20">
+                  <div class="card host-details">
+                    <div class="host-details-image">
+                      <img
+                        alt="subhah"
+                        src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-saraf.webp"
+                      />
+                    </div>
+                    <div>
+                      <h5 class="host-name">Subah Saraf</h5>
                     </div>
 
-                    <div class="card host-details">
-                      <div class="host-details-image">
-                        <img
-                          alt="himadri"
-                          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/himadri-pareek.webp"
-                        />
-                      </div>
-                      <div>
-                        <h5 class="host-name">Himadri Pareek</h5>
-                      </div>
+                    <div class="description host-details-inner">
+                      <p class="host-detail-text">
+                        Subah is an <b>acclaimed health educator</b>, published
+                        author and co-founder of the health education platform
+                        'Satvic Movement'. Subah's journey into health began
+                        after she healed her own chronic diseases by At the
+                        young age of 17,
+                      </p>
 
-                      <div class="description host-details-inner">
-                        <p class="host-detail-text">
-                          Himadri, is a young and dynamic Satvic health educator
-                          from Jaipur and has been a part of the
-                          <b>Satvic Team for more than 4 years</b>. She trained
-                          intensively to be an educator and she
-                          <b>currently leads</b> the 4-hour
-                        </p>
-
-                        <p class="host-detail-text">
-                          Health Transformation Workshops, 3-Day Juice Fast and
-                          now co-hosts the Ultimate Health Challenge along with
-                          Subah. Till date, Himadri has hosted more workshops
-                          for over 6000 people.
-                        </p>
-                        <p class="host-detail-text">
-                          She chose the path of natural healing when she saw
-                          immense improvement in her father's health. That
-                          inspired her to make this the purpose of her own life:
-                          to share health wisdom with the world in easily,
-                          applicable terms.
-                        </p>
-                      </div>
-                      <span class="read-more-text button">
-                        Read More
-                        <img
-                          alt="Arrow Icon"
-                          loading="lazy"
-                          width="15"
-                          height="10"
-                          decoding="async"
-                          data-nimg="1"
-                          class="ml-2 transform cursor-pointer"
-                          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/yoga/down-arrow.svg"
-                        />
-                      </span>
+                      <p class="host-detail-text">
+                        she decided to devote her life to the purpose of
+                        uplifting people's health, and trained to become a
+                        holistic health educator. She learnt the science of
+                        'nature cure' under the guidance of multiple Indian
+                        masters.
+                      </p>
+                      <p class="host-detail-text">
+                        Subah's goal is to share this intricate ancient
+                        knowledge, adjusted to contemporary lifestyles, with as
+                        many people as possible, using all the tools that
+                        current day technology has to offer.
+                      </p>
                     </div>
+                    <span class="read-more-text button">
+                      Read More
+                      <img
+                        alt="Arrow Icon"
+                        loading="lazy"
+                        width="15"
+                        height="10"
+                        decoding="async"
+                        data-nimg="1"
+                        class="ml-2 transform cursor-pointer"
+                        src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/yoga/down-arrow.svg"
+                      />
+                    </span>
+                  </div>
+
+                  <div class="card host-details">
+                    <div class="host-details-image">
+                      <img
+                        alt="himadri"
+                        src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/himadri-pareek.webp"
+                      />
+                    </div>
+                    <div>
+                      <h5 class="host-name">Himadri Pareek</h5>
+                    </div>
+
+                    <div class="description host-details-inner">
+                      <p class="host-detail-text">
+                        Himadri, is a young and dynamic Satvic health educator
+                        from Jaipur and has been a part of the
+                        <b>Satvic Team for more than 4 years</b>. She trained
+                        intensively to be an educator and she
+                        <b>currently leads</b> the 4-hour
+                      </p>
+
+                      <p class="host-detail-text">
+                        Health Transformation Workshops, 3-Day Juice Fast and
+                        now co-hosts the Ultimate Health Challenge along with
+                        Subah. Till date, Himadri has hosted more workshops for
+                        over 6000 people.
+                      </p>
+                      <p class="host-detail-text">
+                        She chose the path of natural healing when she saw
+                        immense improvement in her father's health. That
+                        inspired her to make this the purpose of her own life:
+                        to share health wisdom with the world in easily,
+                        applicable terms.
+                      </p>
+                    </div>
+                    <span class="read-more-text button">
+                      Read More
+                      <img
+                        alt="Arrow Icon"
+                        loading="lazy"
+                        width="15"
+                        height="10"
+                        decoding="async"
+                        data-nimg="1"
+                        class="ml-2 transform cursor-pointer"
+                        src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/yoga/down-arrow.svg"
+                      />
+                    </span>
                   </div>
                 </div>
               </div>
@@ -2739,6 +2733,7 @@
     </footer>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Curriculum For The 21 Days -->
   <script>
     $(".taTabs__nav").click(function () {
       var index = $(this).index() + 1;
@@ -2751,7 +2746,9 @@
         "taTabs__content--active"
       );
     });
-
+  </script>
+  <!-- Sidebar -->
+  <script>
     $(document).ready(function () {
       var $window = $(window);
       var $sidebar = $(".sidebar");
@@ -2774,7 +2771,9 @@
         }
       });
     });
-
+  </script>
+  <!-- QNA -->
+  <script>
     document.querySelectorAll(".qna__item").forEach((item) => {
       const minimizeSiblings = true;
       const question = item.querySelector(".qna__question");
@@ -2829,52 +2828,44 @@
 
       question.addEventListener("click", onClick);
     });
+  </script>
+  <!-- About The Hosts -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const cardHeight = 125; // Collapsed height
 
-    // define the card height when it is not expanded
-    const cardHeight = 130;
+      document.querySelectorAll(".card").forEach((card) => {
+        const description = card.querySelector(".description");
+        const readMore = card.querySelector(".read-more-text");
+        const icon = readMore.querySelector("img"); // Select the icon inside the button
 
-    // get all cards
-    const cards = document.querySelectorAll(".card");
+        if (!description || !readMore || !icon) return;
 
-    // loop through cards
-    for (let card of cards) {
-      const description = card.querySelector(".description");
-      const readMore = card.querySelector(".button");
+        // Set initial collapsed state
+        description.style.maxHeight = `${cardHeight}px`;
 
-      // limit description height to s200px
-      description.style.maxHeight = `${cardHeight}px`;
-      // hide read more button if description is less than card height
-      if (description.scrollHeight <= cardHeight) {
-        readMore.style.display = "none";
-      }
-
-      // function to add span with hellip
-      // const addSpan = () => {
-      //   let span = document.createElement("span");
-      //   span.innerHTML = "&hellip;";
-      //   description.parentNode.insertBefore(span, description.nextSibling);
-      // };
-
-      // add a span with hellip at the end of the container if the card is not expanded
-      if (description.scrollHeight > cardHeight) {
-        // addSpan();
-      }
-
-      // add event listener to read more button to toggle description height
-      readMore.addEventListener("click", () => {
-        if (description.style.maxHeight === `${cardHeight}px`) {
-          description.style.maxHeight = `${description.scrollHeight}px`;
-          readMore.innerHTML = "Read less";
-          // remove span with hellip when description is expanded
-          description.nextSibling.remove();
-        } else {
-          description.style.maxHeight = `${cardHeight}px`;
-          readMore.innerHTML = "Read more";
-          // add span with hellip when description is collapsed
-          // addSpan();
+        // Hide "Read More" if content is already short
+        if (description.scrollHeight <= cardHeight) {
+          readMore.style.display = "none";
+          return;
         }
+
+        // Toggle content on click
+        readMore.addEventListener("click", () => {
+          const isCollapsed = description.style.maxHeight === `${cardHeight}px`;
+
+          if (isCollapsed) {
+            description.style.maxHeight = `${description.scrollHeight}px`;
+            readMore.firstChild.textContent = "Read Less ";
+            icon.classList.add("rotate-180"); // Rotate icon upwards
+          } else {
+            description.style.maxHeight = `${cardHeight}px`;
+            readMore.firstChild.textContent = "Read More ";
+            icon.classList.remove("rotate-180"); // Reset icon rotation
+          }
+        });
       });
-    }
+    });
   </script>
   <!-- Intl-Tel-Input JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/js/intlTelInput.min.js"></script>
