--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -20,70 +20,190 @@
       href="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/css/intlTelInput.css"
     />
   </head>
+
   <body class="bg-F4F2EB">
     <!-- Hero -->
-    <section class="hero-section hero-clip-path">
-      <main class="hero-content container-class">
-        <div class="text-section">
-          <div>
-            <span>21-Day</span>
-            <h4><strong>Ultimate Health</strong><br />Challenge</h4>
-            <p>Learn 7 life transforming habits in 21 days</p>
+    <section class="hero-section-ty hero-clip-path">
+      <main class="container-class">
+        <h3>Thank You Shiv</h3>
+        <p>
+          <strong>Your Registration is Confirmed</strong><br />
+          for 21-Day Ultimate Health Challenge
+        </p>
+        <div
+          class="mt-20 d-flex align-items-center justify-items-center gap-10"
+        >
+          <div class="d-flex align-items-center justify-items-center gap-1">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 16 16"
+              fill="none"
+            >
+              <g clip-path="url(#clip0_8979_9778)">
+                <path
+                  d="M3.4153 1.33545V4.21283M6.23584 1.33545V4.21283M9.75871 1.33545V4.21283M12.5793 1.33545V4.21283M2.73549 6.78168H13.2591M7.68326 2.33877C6.13455 2.33877 4.45521 2.51701 3.1091 3.28264C1.37805 4.26996 0.952651 6.30861 0.903129 8.05698C0.851355 9.85563 0.885129 12.1273 2.54414 13.3386C4.02757 14.4197 6.11428 14.6642 7.94662 14.6688C10.7356 14.6688 14.3215 14.1226 14.864 11.0875C15.1949 9.24542 15.366 6.30401 14.2495 4.65391C13.2523 3.18437 11.2489 2.59701 9.49079 2.43246C8.93254 2.38446 8.32031 2.33877 7.68326 2.33877Z"
+                  stroke="#49887B"
+                  stroke-width="1.2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_8979_9778">
+                  <rect width="16" height="16" fill="white" />
+                </clipPath>
+              </defs>
+            </svg>
+            <span>Starts on 2nd Dec</span>
           </div>
-          <div class="register-now-div">
-            <a class="register-now" href="/workshops">
-              <span class="register-text">Register Now</span>
-              <img
-                width="14"
-                height="0"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg"
+          <div class="d-flex align-items-center justify-items-center gap-1">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 16 16"
+              fill="none"
+            >
+              <path
+                d="M14.5625 5.40247C13.303 2.07848 9.7479 0.310546 6.22228 1.25184C2.46719 2.2544 0.236741 6.09283 1.24043 9.82521C2.24412 13.5576 6.10187 15.7705 9.85696 14.768C12.6451 14.0236 14.5927 11.7158 15 9.04888M14.5625 5.40247L12.8664 5.63472M14.5625 5.40247L15 3.64697"
+                stroke="#49887B"
+                stroke-width="1.2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
               />
-            </a>
-            <div class="people-joined">
-              <img
-                loading="lazy"
-                width="52"
-                height="16"
-                decoding="async"
-                data-nimg="1"
-                style="color: transparent"
-                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/workshop/detail/comunity-stacks.svg"
+              <path
+                d="M8 5.21045V8.0102L9.4 9.41007"
+                stroke="#49887B"
+                stroke-width="1.2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
               />
-              <p>
-                <strong class="text-[#9D684D]">3268+</strong> people have
-                already joined
-              </p>
-            </div>
+            </svg>
+            <span>6-7 AM</span>
           </div>
-        </div>
-        <div class="video-section">
-          <video
-            autoplay=""
-            loop=""
-            muted=""
-            playsinline=""
-            style="
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              z-index: 0;
-            "
-          >
-            <source
-              src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/videos/homepage-hero-square.mp4"
-              type="video/mp4"
-            />
-            Your browser does not support the video tag.
-          </video>
         </div>
       </main>
     </section>
+    <!-- Main Section -->
+    <section class="container-class-ty">
+      <p>
+        <strong>3 Steps to complete</strong> before the<br />
+        workshop starts
+      </p>
+      <form class="ty-card ty-review-card">
+        <h3>Review Your Contact Details</h3>
+        <div class="ty-form-group-parent">
+          <label for="email">Email ID (Optional)</label>
+          <div class="ty-form-group">
+            <input
+              type="email"
+              name="email"
+              id=""
+              placeholder="Ravi@gmail.com"
+            />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="19"
+              height="19"
+              viewBox="0 0 19 19"
+              fill="none"
+            >
+              <path
+                d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+                stroke="#666666"
+                stroke-opacity="0.6"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+                stroke="#666666"
+                stroke-opacity="0.6"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
+                stroke="#666666"
+                stroke-opacity="0.6"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <!-- Phone Number Input with Country Dropdown -->
+        <div class="ty-form-group-parent">
+          <label for="email">Whatsapp Number</label>
+          <div class="ty-form-group">
+            <div class="phone-input">
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                placeholder="WhatsApp Number*"
+                required
+              />
+            </div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="19"
+              height="19"
+              viewBox="0 0 19 19"
+              fill="none"
+            >
+              <path
+                d="M8.70898 1.58325H7.12565C3.16732 1.58325 1.58398 3.16659 1.58398 7.12492V11.8749C1.58398 15.8333 3.16732 17.4166 7.12565 17.4166H11.8757C15.834 17.4166 17.4173 15.8333 17.4173 11.8749V10.2916"
+                stroke="#666666"
+                stroke-opacity="0.6"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M12.698 2.39067L6.45966 8.629C6.22216 8.8665 5.98466 9.33358 5.93716 9.674L5.59674 12.0569C5.47008 12.9198 6.07966 13.5215 6.94258 13.4028L9.32549 13.0623C9.65799 13.0148 10.1251 12.7773 10.3705 12.5398L16.6088 6.3015C17.6855 5.22483 18.1922 3.974 16.6088 2.39067C15.0255 0.807334 13.7747 1.314 12.698 2.39067Z"
+                stroke="#666666"
+                stroke-opacity="0.6"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M11.8047 3.2854C12.3351 5.17748 13.8155 6.6579 15.7155 7.19623"
+                stroke="#666666"
+                stroke-opacity="0.6"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <span
+          >Issue registering mobile number ?
+          <a href="http://">Contact Us</a></span
+        >
+      </form>
+      <div class="ty-card">
+        <h3>Download Satvic App</h3>
+        <p>
+          This is where you will experience the workshop and all the activities
+          from
+        </p>
+        
+      </div>
+      <div class="ty-card">
+        <h3>We Have A Message For You</h3>
+        <video src=""></video>
+      </div>
+      <div class="ty-session-counter"></div>
+    </section>
     <!-- Footer -->
     <footer class="footer-bottom">
-      <div class="container-class footer-data">
+      <div style="align-items: center" class="container-class footer-data">
         <img
           class="logo-footer"
           src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/Logo-footer.webp"
@@ -95,4 +215,6 @@
       </div>
     </footer>
   </body>
+   <!-- Intl-Tel-Input JavaScript -->
+   <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@19.5.3/build/js/intlTelInput.min.js"></script>
 </html>
