--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -23,9 +23,16 @@
 
   <body class="bg-F4F2EB">
     <!-- Hero -->
-    <section class="hero-section-ty hero-clip-path">
+    <div class="hero-section-ty hero-clip-path bg-F4F2EB">
       <main class="container-class">
-        <h3>Thank You Shiv</h3>
+        <h3>
+          Thank You Shiv
+          <img
+            style="width: 35px; height: 35px"
+            src="/images/thank-you/popper.gif"
+            alt="party-popper"
+          />
+        </h3>
         <p>
           <strong>Your Registration is Confirmed</strong><br />
           for 21-Day Ultimate Health Challenge
@@ -85,9 +92,9 @@
           </div>
         </div>
       </main>
-    </section>
+    </div>
     <!-- Main Section -->
-    <section class="container-class-ty">
+    <div class="container-class-ty">
       <div>
         <div class="step-container">
           <!-- completed -->
@@ -224,6 +231,18 @@
                   This is where you will experience the workshop and all the
                   activities from
                 </p>
+                <div class="ty-store-icons">
+                  <img
+                    style="width: 128px; height: 41px"
+                    src="/images/thank-you/app-store.svg"
+                    alt="party-popper"
+                  />
+                  <img
+                    style="width: 128px; height: 41px"
+                    src="/images/thank-you/play-store.svg"
+                    alt="party-popper"
+                  />
+                </div>
               </div>
             </div>
           </div>
@@ -238,7 +257,16 @@
             <div class="step-content">
               <div class="ty-card">
                 <h3>We Have A Message For You</h3>
-                <!-- <video src=""></video> -->
+                <video
+                  autoplay
+                  loop
+                  muted
+                  class="ty-video"
+                  src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/videos/thank-you.mp4"
+                  controls
+                >
+                  Your browser does not support the video tag.
+                </video>
               </div>
             </div>
           </div>
@@ -265,7 +293,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
     <!-- Footer -->
     <footer class="footer-bottom">
       <div style="align-items: center" class="container-class footer-data">
