--- a/index.html
+++ b/index.html
@@ -233,7 +233,32 @@
     <section>
       <div class="container-class main-content">
         <div class="first-col content">
-          <!-- pre requisites div -->
+          <!-- Challenge starting in -->
+          <div class="session-counter-home">
+            <h3>Challenge starting in</h3>
+            <div class="ty-session-counter m-0">
+              <h4>Challenge starting in</h4>
+              <div class="counter-card-container">
+                <div class="counter-card">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+                <div class="counter-card">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+                <div class="counter-card">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+                <div class="counter-card">
+                  <h6>02</h6>
+                  <p>Days</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Pre Requisites -->
           <div class="pre-requisite-div">
             <div>
               <h4>Prerequisites to join this workshop</h4>
@@ -442,7 +467,7 @@
                   What Are The 7 Habits I Will Learn?
                 </h2>
               </div>
-              <div class="habits-div d-flex gap-20 flex-wrap">
+              <div class="habits-parent">
                 <div class="habit-item">
                   <div class="mb-20">
                     <img
@@ -540,8 +565,8 @@
                   </div>
                 </div>
 
-                <a class="register-now-habit" href=""
-                  ><span class="register-now-habit-text">Register Now</span>
+                <a class="habit-register-now" href=""
+                  ><span class="habit-register-text">Register Now</span>
                   <img
                     width="14"
                     height="0"
@@ -2254,7 +2279,7 @@
             </div>
             <div class="mt-40 subhah-image-div">
               <img
-                class="subhah-images"
+                class="subah-and-harsh"
                 src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-and-harsh.webp"
                 alt="subhah-harsh-image"
               />
@@ -2466,8 +2491,8 @@
                   <div class="card host-details">
                     <div class="host-details-image">
                       <img
-                        alt="subhah"
-                        src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-saraf.webp"
+                        alt="subah-saraf"
+                        src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/subah-saraf.jpg"
                       />
                     </div>
                     <div>
@@ -2711,7 +2736,15 @@
                 <span>Contribution: ₹990 - ₹2990</span>
               </li>
             </ul>
-            <a class="sidebar-register" href="">Register Now</a>
+            <a class="sidebar-register-now" href="/workshops"
+              ><span class="sidebar-register-text">Register Now</span>
+              <img
+                style="width: 14px"
+                width="14"
+                height="0"
+                src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg"
+            /></a>
+
             <ul class="sidebar-ul">
               <li class="sidebar-li">
                 <div class="sidebar-inner-icon-container">
