fixed github issues

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -274,20 +274,20 @@
       </div>
       <div class="ty-session-counter">
         <h4>Your First Session Starts In</h4>
-        <div class="counter-card-container">
-          <div class="counter-card">
+        <div class="ty-counter-card-container">
+          <div class="ty-counter-card">
             <h6>02</h6>
             <p>Days</p>
           </div>
-          <div class="counter-card">
+          <div class="ty-counter-card">
             <h6>02</h6>
             <p>Days</p>
           </div>
-          <div class="counter-card">
+          <div class="ty-counter-card">
             <h6>02</h6>
             <p>Days</p>
           </div>
-          <div class="counter-card">
+          <div class="ty-counter-card">
             <h6>02</h6>
             <p>Days</p>
           </div>
