--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -29,7 +29,7 @@
           Thank You Shiv
           <img
             style="width: 35px; height: 35px"
-            src="/images/thank-you/popper.gif"
+            src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/popper.gif"
             alt="party-popper"
           />
         </h3>
@@ -234,12 +234,12 @@
                 <div class="ty-store-icons">
                   <img
                     style="width: 128px; height: 41px"
-                    src="/images/thank-you/app-store.svg"
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/app-store.svg"
                     alt="party-popper"
                   />
                   <img
                     style="width: 128px; height: 41px"
-                    src="/images/thank-you/play-store.svg"
+                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/play-store.svg"
                     alt="party-popper"
                   />
                 </div>
@@ -298,8 +298,8 @@
     <footer class="footer-bottom">
       <div style="align-items: center" class="container-class footer-data">
         <img
-          class="logo-footer"
-          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/Logo-footer.webp"
+          class="sm-footer-logo"
+          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/sm-footer-log.svg"
         />
         <div>
           <span>&copy; 2025 Satvic Movement </span> <span>|</span>
