fixed github issues

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -296,14 +296,16 @@
     </div>
     <!-- Footer -->
     <footer class="footer-bottom">
-      <div style="align-items: center" class="container-class footer-data">
+      <div class="container-class footer-data">
         <img
-          class="sm-footer-logo"
-          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/sm-footer-log.svg"
+          class="logo-footer"
+          src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/sm-footer-logo.svg"
         />
-        <div>
+        <div class="footer-ul">
           <span>&copy; 2025 Satvic Movement </span> <span>|</span>
-          <a href="#">Privacy Policy</a>
+          <a target="_blank" href="https://satvicmovement.org/privacy-policy"
+            >Privacy Policy</a
+          >
         </div>
       </div>
     </footer>
