--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </main>
     </section>
     <!-- Workshop IconBox -->
-    <section class="workshop-details mb-60">
+    <section class="workshop-details mb-40">
       <div class="main-area container-class">
         <div class="workshop-iconbox">
           <!-- Start Date -->
@@ -445,7 +445,7 @@
                 <div class="benefits-sections">
                   <div class="benefit-img">
                     <img
-                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/reach-your-ideal-weight.webp"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/reach-your-ideal-weight.png"
                     />
                   </div>
                   <p>Reach your <br /><b>ideal weight</b></p>
@@ -453,7 +453,7 @@
                 <div class="benefits-sections">
                   <div class="benefit-img">
                     <img
-                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/gain-full-control-over-cravings.webp"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/gain-full-control-over-cravings.png"
                     />
                   </div>
                   <p>
@@ -467,7 +467,7 @@
                 <div class="benefits-sections">
                   <div class="benefit-img">
                     <img
-                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/help-you-create-food-plans-tailored-to-you.webp"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/help-you-create-food-plans-tailored-to-you.png"
                     />
                   </div>
                   <p>
@@ -482,7 +482,7 @@
                 <div class="benefits-sections">
                   <div class="benefit-img">
                     <img
-                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/gain-much-more-energy-in-the-day.webp"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/gain-much-more-energy-in-the-day.png"
                     />
                   </div>
                   <p>
@@ -497,7 +497,7 @@
                 <div class="benefits-sections">
                   <div class="benefit-img">
                     <img
-                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/experience-more-mental-clarity.webp"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/experience-more-mental-clarity.png"
                     />
                   </div>
                   <p>Experience more <br /><b> mental clarity</b></p>
@@ -505,7 +505,7 @@
                 <div class="benefits-sections">
                   <div class="benefit-img">
                     <img
-                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/get-deeper-sleep-at-night.webp"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/get-deeper-sleep-at-night.png"
                     />
                   </div>
                   <p>
