fixed github issues

--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
           <hr class="divider mt-40" />
           <div class="mt-40">
             <div class="testimonial-div">
-              <div>
+              <div class="testimonial-heading">
                 <h2 class="whats-say-heading">What People Are Saying?</h2>
                 <p class="whats-say-subheading">
                   205,988+ people have already completed The Ultimate Health
@@ -2268,7 +2268,7 @@
                 for:
               </p>
             </div>
-            <div class="d-flex gap-20 workshop-for-not-all-inner">
+            <div class="workshop-for-not-all-inner">
               <div class="not-for-items">
                 <div>
                   <img
