--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
               <h2 class="whats-include-heading mb-0">Benefits You Will Gain</h2>
               <p class="benefits-subheading">by taking this challenge</p>
             </div>
-            <div class="d-flex flex-wrap gap-5">
+            <div style="margin-top: 10px;" class="d-flex flex-wrap gap-5">
               <div class="benefits-sections">
                 <div class="benefit-img">
                   <img
