--- a/index.html
+++ b/index.html
@@ -135,9 +135,10 @@
               top: 0;
               left: 0;
               width: 100%;
-              height: 100%;
+              /* height: 100%; */
               object-fit: cover;
               z-index: 0;
+              border-radius: 12px;
             "
           >
             <source
